# evonith_bf_webapp

./: .gitignore  pyproject.toml
logs/: app.log.1  app.log.2  app.log.3
src/: app.py
src/config/: INIT_PARAMS.py  config_loader.py  loader.py  logger_setting.yml  setting.yaml  setting_ds.yaml  setting_ds_dv.yml  setting_submission.yaml  setting_vsense.yml  settings.py  variable_names.py
src/custom_pages/: 1_🏭_Welcome.py  2_📓_Data_Submission.py  3_📈_Data_Visualisation.py  4_🤖_Recommendations.py  5_📝_Reports.py
src/data/: Cleaned_Dataset_BF_hourly (2).xlsx  Merged_DPR_PrcsParams.xlsx  data.pkl  data.xlsx
src/data_fetchers/: average_heatload_data_fetcher.py  base_data_fetcher.py  circular_temperature_contour_data_fetcher.py  database.py  longitudinal_temperature_contour_data_fetcher.py  temp_data_fetcher.py  ts_data_fetcher.py  ts_heatload_data_fetcher.py
src/geometries/: furnace_gen.py  mask_circular.pkl  mask_longitudinal.pkl
src/models/: coke_rate_scaler.pkl  eta_co_scaler.pkl  fuel_rate_scaler.pkl  fuelrate_tcn.pth  model.pkl  prod_rate_scaler.pkl
src/plotters/: base_contour.py  circumferential_contour.py  heatload_contour.py  longitudinal_temp_contour.py
src/templates/: examplebf2process download.xlsx
src/utils/: data_helpers.py  data_submission.py  logger.py  optimiser.py  recommendations.py
src/utils/helper_functions_visualisation/: plotter_circum_heatloads.py  plotter_longitudinal_temp.py
